--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "gsap": "^3.12.2",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
@@ -24,7 +25,8 @@
     "react-router-dom": "^6.15.0",
     "split-type": "^0.3.3",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
