--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/list": "^6.1.9",
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "gsap": "^3.12.2",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.27",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "socket.io-client": "^4.7.2",
     "split-type": "^0.3.3",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.3",
